--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="header" style="margin-top: 0px;">
             <div class="heading">
-               <h3 style="margin-left: 5px;font-size: 1rem; margin-top: 20px;"><a href="index.html" class="logo">TENDER TRUST
+               <h3 style="margin-left: 5px;font-size: 1rem; margin-top: 20px;"><a href="index.html" class="logo">TENDER HEARTS TRUST
             </a></h3></div>
 
             <input class="menu-btn" type="checkbox" id="menu-btn" />
